[gd_scene load_steps=3 format=3 uid="uid://v3hx4rmubxq"]

[ext_resource type="Script" path="res://MenuControl.gd" id="1_6y3j0"]
[ext_resource type="PackedScene" uid="uid://bxvgtosm7m132" path="res://nebula.tscn" id="2_que06"]

[node name="MenuControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6y3j0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 380.0
offset_top = 283.0
offset_right = 776.0
offset_bottom = 411.0

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer"]

[node name="startButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="descButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Read Game Description"

[node name="quitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 447.0
offset_top = 212.0
offset_right = 700.0
offset_bottom = 238.0
text = "A Recreation of LoL Dodge Game"

[node name="nebula" parent="." instance=ExtResource("2_que06")]
position = Vector2(169, 312)
scale = Vector2(3, 3)

[node name="nebula2" parent="." instance=ExtResource("2_que06")]
position = Vector2(968, 316)
scale = Vector2(3, 3)

[connection signal="pressed" from="VBoxContainer/startButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/descButton" to="." method="_on_desc_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
